# cyber-rag

./: .env.example  .gitignore  CSIT5520_Part2_Speech.md  CyberMetric-01-v1.jsonl  CyberMetric-500-v1.jsonl  README.md  RedSage_kali.json  RedSage_kali.jsonl  Red_sage_cli.jsonl  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  ctfknow.json  ctfknow.jsonl  ctfknow_multiple_choice.jsonl  pyproject.toml  report.md  requirements.txt  run.sh  test.jsonl
artifacts/evals/: latest.csv  latesttest.csv
artifacts/indexes/default/: index.faiss  index.pkl  manifest.json
cyber_rag/: __init__.py  config.py  logging_utils.py  schemas.py
cyber_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cyber_rag/cli/: __init__.py  build_index.py  check_config.py  run_eval.py  run_query.py  test_connection.py
cyber_rag/evaluation/: __init__.py  datasets.py  llm_judge.py  ragas_metrics.py  runner.py  summarize_output.py  text_metrics.py
cyber_rag/generation/: __init__.py  chain.py  local_llm.py
cyber_rag/indexing/: __init__.py  faiss_store.py
cyber_rag/ingest/: __init__.py  dots_ocr.py  loaders.py  pymupdf_parser.py
cyber_rag/processing/: __init__.py  chunking.py  normalize.py
cyber_rag/retrieval/: __init__.py  retriever.py
cyber_rag/web/: server.py
data/raw/: README.md
eval_datasets/: CyberMetric-01-v2.jsonl  CyberMetric-80-v1.jsonl  SecQA.jsonl  ctfknow_short_answer.jsonl  demo_md5_bruteforce.jsonl
scripts/: analyze_eval.py  build_index.py  run_eval.py  run_query.py
tests/: test_chunking.py
(+1 files in other folders)
