[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-rag"
version = "0.1.0"
description = "CyberRAG retrieval evaluation framework for cybersecurity experiments."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
cyber-rag-build-index = "cyber_rag.cli.build_index:main"
cyber-rag-query = "cyber_rag.cli.run_query:main"
cyber-rag-eval = "cyber_rag.cli.run_eval:main"
cyber-rag-check-config = "cyber_rag.cli.check_config:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cyber_rag*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
